samples/_failures_safe/1761692232_a3f92e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5551b125.c: In function ‘main’:
./samples/SAFE/__tmp_5551b125.c:120:9: error: expected expression at end of input
  120 |         if (cols1 == rows2)
      |         ^~
./samples/SAFE/__tmp_5551b125.c:120:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5551b125.c:120:9: error: expected declaration or statement at end of input
